# sonicframe-HITL

./: .env.example  .gitignore  CHANGED_FILES.md  DELETED_FILES.txt  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.sh
docs/: ARCHITECTURE.md  EVALUATION.md  SUBMISSION.md
examples/: sample_feedback.json  sample_profile.json  sample_timeline.json
scripts/: create_demo_video.py
sonicframe_hitl/: __init__.py  audio.py  cli.py  config.py  exporters.py  feedback.py  models.py  planner.py  storage.py  video_analysis.py  vision_backends.py
sonicframe_hitl/api/: main.py
sonicframe_hitl/ui/: app.py
tests/: test_audio.py  test_exporters.py  test_feedback.py  test_planner.py  test_preference_ranking.py  test_vision_cascade.py
