[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonicframe-hitl"
version = "0.1.0"
description = "Human-in-the-loop Explainable Video-to-Audio Sound Design System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SonicFrame HITL Team"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "numpy>=1.24",
  "soundfile>=0.12",
  "opencv-python-headless>=4.8",
  "streamlit>=1.32",
  "pandas>=2.0",
  "requests>=2.31",
  "typer>=0.9",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
sonicframe = "sonicframe_hitl.cli:app"

[tool.setuptools.packages.find]
include = ["sonicframe_hitl*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
